--- a/roar-k8s/roar-complete.yaml
+++ b/roar-k8s/roar-complete.yaml
@@ -35,6 +35,7 @@ spec:
   - name: frontend
     port: 8089
     targetPort: 8080
+    nodePort: 31790
   selector:
     app: roar-web
   type: NodePort
