--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -5,11 +5,12 @@
     "memory": "8gb",
     "storage": "32gb"
   },
+  "postCreateCommand": "echo alias k=kubectl >> ~/.bash_aliases",
   "forwardPorts": [35200, 35300, 35400, 35500],
   "portsAttributes": {
           "35200": { "label": "* Prometheus     " },
           "35300": { "label": "* Node Exporter  " },
           "35400": { "label": "* Alert Manager  " },
-          "35500": { "label": "* Grafana        " }
+          "35500": { "label": "* Grafana            " }
   },
 }
