--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -6,11 +6,28 @@
     "storage": "32gb"
   },
   "postCreateCommand": "echo alias k=kubectl >> ~/.bash_aliases",
-  "forwardPorts": [35200, 35300, 35400, 35500],
+  "forwardPorts": [35200, 35300, 35400, 35500, 35600, 31790, 9104],
   "portsAttributes": {
-          "35200": { "label": "* Prometheus     " },
-          "35300": { "label": "* Node Exporter  " },
-          "35400": { "label": "* Alert Manager  " },
-          "35500": { "label": "* Grafana            " }
+    "9104": {
+      "label": "Mysql exporter metrics"
+    },
+    "31790": {
+      "label": "ROAR Sample App"
+    },
+    "35200": {
+      "label": "* Prometheus     "
+    },
+    "35300": {
+      "label": "* Node Exporter  "
+    },
+    "35400": {
+      "label": "* Alert Manager  "
+    },
+    "35500": {
+      "label": "* Grafana            "
+    },
+    "35600": {
+      "label": "* Traefik metrics"
+    }
   }
 }
